// file: pkg/config/proto/validation_rule.proto
// version: 1.0.0
// guid: 6cc709c2-996e-4e1c-aa4d-0c7741fadb21

edition = "2023";

package gcommon.v1.config;
import "pkg/config/proto/validation_severity.proto";


import "google/protobuf/timestamp.proto";
option go_package = "github.com/jdfalk/gcommon/pkg/config/proto";

message ValidationRule {
  // Rule name
  string name = 1;

  // Rule description
  string description = 2;

  // Rule expression
  string expression = 3;

  // Error message if validation fails
  string error_message = 4;

  // Rule severity
  ValidationSeverity severity = 5;

  // Parameters this rule applies to
  repeated string parameters = 6;

  // Rule conditions
  map<string, string> conditions = 7;
}