// file: pkg/media/proto/messages/media_metadata.proto
// version: 1.0.0
// guid: e5b804c2-185f-402f-8edb-b3c390406e52

edition = "2023";

package gcommon.v1.media;

import "google/protobuf/go_features.proto";
import "pkg/media/proto/messages/series_info.proto";
import "pkg/media/proto/messages/movie_info.proto";

option go_package = "../../../../pkg/media/pb;mediapb";
option features.(pb.go).api_level = API_HYBRID;

// Metadata information for a media file from external sources.
message MediaMetadata {
  string title = 1;
  string original_title = 2;
  int32 year = 3;
  string plot = 4;
  repeated string genres = 5;
  string imdb_id = 6;
  string tmdb_id = 7;
  float rating = 8;
  repeated string languages = 9;
  repeated string actors = 10;
  repeated string directors = 11;
  SeriesInfo series_info = 12;
  MovieInfo movie_info = 13;
}
