
package gcommon.v1.media;

import "google/protobuf/go_features.proto";
import "buf/validate/validate.proto";

edition = "2023";
option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/sdks/go/v1/media";

message AudioExtractionOptions {
  string output_format = 1; // Output format (mp3, aac, flac, etc.)
  int32 bitrate = 2; // Target bitrate in kbps
  int32 sample_rate = 3; // Target sample rate
  bool normalize_audio = 4; // Normalize audio levels
}
