
package gcommon.v1.media;

import "google/protobuf/go_features.proto";
import "buf/validate/validate.proto";

edition = "2023";
option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/sdks/go/v1/media";

message ChapterDetectionOptions {
  double silence_threshold_db = 1; // Silence threshold in dB
  double min_chapter_length_seconds = 2; // Minimum chapter length
  bool use_metadata = 3; // Use existing metadata for hints
  bool use_ai_detection = 4; // Use AI-based scene detection
}
