
package gcommon.v1.media;

import "google/protobuf/go_features.proto";
import "buf/validate/validate.proto";

edition = "2023";
option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/sdks/go/v1/media";

message SubtitleExtractionOptions {
  string output_format = 1; // Output format (srt, vtt, ass, etc.)
  bool include_hearing_impaired = 2; // Include hearing impaired tracks
  bool include_forced = 3; // Include forced tracks
  repeated string languages = 4; // Filter by languages
}
